--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,35 @@
 # OpenAI API Key (Required)
-OPENAI_API_KEY=sk-...
+OPENAI_API_KEY=sk-..
+
+# Anthropic API Key (옵션)
+ANTHROPIC_API_KEY=..
 
 # Application URL
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-# Optional: Anthropic API Key
-ANTHROPIC_API_KEY=...
+# 이미지 생성 설정
+OPENAI_IMAGE_MODEL=dall-e-3
+IMAGE_DEFAULT_SIZE=1024x1024
+IMAGE_DEFAULT_QUALITY=standard
+IMAGE_DEFAULT_STYLE=vivid
+
+# 검색 API
+TAVILY_API_KEY=your_tavily_api_key_here
+
+# MCP 서버 설정
+SEARCH_MCP_PORT=8050
+IMAGE_MCP_PORT=8051
+
+#  A2A 프로토콜 사용시 (옵션)
+A2A_AGENT_NAME=ImageGenerationAgent
+A2A_AGENT_PORT=8080
+A2A_AGENT_HOST=0.0.0.0
+
+# 디버그 모드
+DEBUG=true
+LOG_LEVEL=INFO
+
+# 성능 설정
+MAX_KEYWORDS=5
+SEARCH_MAX_RESULTS=3
+IMAGE_TIMEOUT=60
