Chore: remove image-mcp server build file and fix syntx  :

--- a/backend/Dockerfile.image-mcp
+++ b/backend/Dockerfile.image-mcp
@@ -1,4 +1,4 @@
-# # Dockerfile for Image Generation MCP Server
+# Dockerfile for Image Generation MCP Server
 # FROM python:3.12-slim
 
 # WORKDIR /app
